--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "corejs-typeahead": "^1.2.1",
+    "underscore": "^1.9.1",
     "vue": "^2.5.21",
+    "vue-bootstrap-typeahead": "^0.2.6",
+    "vue-router": "^3.0.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
